# Object-Detection-in-CPP-using-CUDA

./: CMakeLists.txt  README.md  main.cpp
src/: YOLOv12.cpp  YOLOv12.h  common.h  logging.h  macros.h  preprocess.cu  preprocess.h
